attempting to fix long name and buttons overlap

--- a/friends.custom.css
+++ b/friends.custom.css
@@ -1735,3 +1735,6 @@ right: 9px!important;}
   
 .changeLog:hover {
   background-color: rgba(var(--white05)) !important;}
+  
+.currentUserContainer .personanameandstatus_statusAndName_9U-hi {
+margin-right: 55px!important;}
